--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ node_modules
 dist
 dist-ssr
 *.local
-package-lock.json
+.package-lock.json
+\package-lock.json
 
 # Editor directories and files
 .vscode/*
